--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,33 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+p{
+  font-size: 50px;
+  font: bolder;
+  margin-top: 200px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+button{
+  font-size: 25px;
+  padding: 10px 15px;
+  border-radius: 25px;
+  margin-left: 15px;
+  margin-right: 15px;
+
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.incr:hover {
+  background:green;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.rest:hover {
+  background:black;
+  color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.decr:hover {
+  background:red;
+  color: white;
 }
